# home_work_20_1

./: data.json  pyproject.toml
config/: settings.py  urls.py
mainapp/: admin.py  models.py  urls.py  views.py
mainapp/management/commands/: fun_action.py
mainapp/migrations/: 0001_initial.py  0002_category_created_at.py  0003_remove_category_created_at.py  0004_alter_category_options_and_more.py  0005_alter_product_description.py
mainapp/templates/main/: base.html  categories.html  index.html  products.html
mainapp/templates/main/includes/: inc_category.html  inc_product.html
