[tool.poetry]
name = "home-work-20-1"
version = "0.1.0"
description = ""
authors = ["Aleksey Belyaev <lesha.belyaev.73@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.1"
psycopg2 = "^2.9.9"
pillow = "^10.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
